@@ -183,6 +183,7 @@ Chronological list of authors
   - Uma D Kadam
   - Tamandeep Singh
   - Mingyi Xue
+  - Meghan Osato
 
 External code
 -------------
